# ai-dev-team

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SOUL.md   docker-compose.yml  pyproject.toml  requirements-dev.txt  test_connection.py
.claude/: settings.json
.claude/commands/: commit.md  localci.md  pullreq.md  rebase.md
.github/workflows/: ci.yml
agents/lisa/: Dockerfile  memory.md  role.md
capabilities/: __init__.py  __main__.py  loader.py  mcp_namespacer.py  models.py  oauth.py  prompt_renderer.py  secrets.py
config/: README.md  agent_tools.json  baseline.yaml  capabilities.yaml  providers.yaml
config.example/: README.md  agent_tools.json
config.example/shared/: MEMORY.md  WORLDVIEW.md
config/secrets/: m365.example.json
docker/: Dockerfile.base  Dockerfile.playwright  entrypoint.sh
docs/: add-a-new-agent.md  add-a-new-capability.md  add-a-new-provider.md  agents.md  capability-framework.md  development-plan-multi-agent-system.md  github-issues-phase1-epic.md  memory-architecture.md  memory-conventions.md  scheduled-tasks.md  spike-claude-cli.md  swap-a-provider.md  testing.md
docs/providers/: claude-ai-connectors.md  m365.md
mcps/m365_calendar/: __init__.py  __main__.py  (+2 more)
memory/: MEMORY.md
router/: Dockerfile  __init__.py  app.py  config.py  context_builder.py  dispatcher.py  memory_curator.py  memory_loader.py  memory_writer.py  mentions.py  requirements.txt  session_end.py  session_manager.py  slack_format.py  thread_loader.py
scripts/: build.sh  test-lisa.sh
systems/: outlook.md  zoho-mail.md
tests/: conftest.py
(+95 files in other folders)
